# vrx

wamv_mpc/: CMakeLists.txt  package.xml
wamv_mpc/include/wamv_mpc/: wamv_mpc.h
wamv_mpc/launch/: mpc.launch  start_mpc.launch
wamv_mpc/scripts/: acados_ocp.json  generate_c_code.py  wamv.py
wamv_mpc/scripts/c_generated_code/: Makefile  acados_sim_solver_bluerov2.c  acados_sim_solver_bluerov2.h  acados_solver_bluerov2.c  acados_solver_bluerov2.h  main_bluerov2.c  main_sim_bluerov2.c
wamv_mpc/scripts/c_generated_code/bluerov2_cost/: bluerov2_cost_y_0_fun.c  bluerov2_cost_y_0_fun_jac_ut_xt.c  bluerov2_cost_y_0_hess.c  bluerov2_cost_y_e_fun.c  bluerov2_cost_y_e_fun_jac_ut_xt.c  bluerov2_cost_y_e_hess.c  bluerov2_cost_y_fun.c  bluerov2_cost_y_fun_jac_ut_xt.c  bluerov2_cost_y_hess.c
wamv_mpc/scripts/c_generated_code/bluerov2_model/: bluerov2_expl_ode_fun.c  bluerov2_expl_vde_adj.c  bluerov2_expl_vde_forw.c
wamv_mpc/src/: wamv_mpc.cpp  wamv_mpc_node.cpp
